SERVER-27195 WIP add Symbol to shell